// Абстрактное выражение (интерфейс)
interface AbstractExpression {
    void interpret(Context context);
}
